--- a/C1/W1/assignment/C1W1_Assignment.ipynb
+++ b/C1/W1/assignment/C1W1_Assignment.ipynb
@@ -106,8 +106,8 @@
     "    # Define feature and target tensors with the values for houses with 1 up to 6 bedrooms. \n",
     "    # For this exercise, please arrange the values in ascending order (i.e. 1, 2, 3, and so on).\n",
     "    # Hint: Remember to explictly set the dtype as float when defining the numpy arrays\n",
-    "    n_bedrooms = None\n",
-    "    price_in_hundreds_of_thousands = None\n",
+    "    n_bedrooms = np.array([1, 2, 3, 4, 5, 6], dtype=float)\n",
+    "    price_in_hundreds_of_thousands = np.array([1.0, 1.5, 2, 2.5, 3, 3.5], dtype=float)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -200,13 +200,13 @@
     "    # Define your model\n",
     "    model = tf.keras.Sequential([ \n",
     "\t\t# Define the Input with the appropriate shape\n",
-    "\t\tNone,\n",
+    "\t\ttf.keras.Input((1,)),\n",
     "\t\t# Define the Dense layer\n",
-    "\t\tNone\n",
+    "\t\ttf.keras.layers.Dense(1)\n",
     "\t]) \n",
     "    \n",
     "    # Compile your model\n",
-    "    model.compile(optimizer=None, loss=None)\n",
+    "    model.compile(optimizer='sgd', loss='mean_squared_error')\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -302,14 +302,14 @@
     "\n",
     "    # Define feature and target tensors with the values for houses with 1 up to 6 bedrooms\n",
     "    # Hint: Remember you already coded a function that does this!\n",
-    "    n_bedrooms, price_in_hundreds_of_thousands = None\n",
+    "    n_bedrooms, price_in_hundreds_of_thousands = create_training_data()\n",
     "    \n",
     "    # Define a compiled (but untrained) model\n",
     "    # Hint: Remember you already coded a function that does this!\n",
-    "    model = None\n",
+    "    model = define_and_compile_model()\n",
     "    \n",
     "    # Train your model for 500 epochs by feeding the training data\n",
-    "    model.fit(None, None, epochs=None)\n",
+    "    model.fit(n_bedrooms, price_in_hundreds_of_thousands, epochs=500)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
