--- a/C1/W2/assignment/C1W2_Assignment.ipynb
+++ b/C1/W2/assignment/C1W2_Assignment.ipynb
@@ -171,7 +171,10 @@
     "        \n",
     "    # Define the model\n",
     "    model = tf.keras.models.Sequential([ \n",
-    "\t\tNone\n",
+    "\t\ttf.keras.input(shape=(28,28)),\n",
+    "        tf.keras.flatten(),\n",
+    "        tf.keras.dense(128, activation=tf.nn.relu),\n",
+    "        tf.keras.dense(10, activation=tf.nn.softmax)\n",
     "    ]) \n",
     "\n",
     "    ### END CODE HERE ###\n",
@@ -283,16 +286,16 @@
     "### START CODE HERE ###\n",
     "\n",
     "# Remember to inherit from the correct class\n",
-    "class EarlyStoppingCallback():\n",
+    "class EarlyStoppingCallback(tf.keras.callbacks.Callback):\n",
     "\n",
     "    # Define the correct function signature for on_epoch_end method\n",
-    "    def None():\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
     "        \n",
     "        # Check if the accuracy is greater or equal to 0.98\n",
-    "        if None >= None:\n",
+    "        if logs['accuracy'] >= 0.98:\n",
     "                            \n",
     "            # Stop training once the above condition is met\n",
-    "            None = None\n",
+    "            self.model.stop_training = True\n",
     "\n",
     "            print(\"\\nReached 98% accuracy so cancelling training!\") \n",
     "\n",
@@ -353,10 +356,10 @@
     "\n",
     "    # Create a compiled (but untrained) version of the model\n",
     "    # Hint: Remember you already coded a function that does this!\n",
-    "    model = None\n",
+    "    model = create_and_compile_model()\n",
     "    \n",
     "    # Fit the model for 10 epochs adding the callbacks and save the training history\n",
-    "    history = None\n",
+    "    history = model.fit(x=training_images, y=training_labels, epochs=10, callbacks=[EarlyStoppingCallback()])\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
