--- a/C1/W4/assignment/C1W4_Assignment.ipynb
+++ b/C1/W4/assignment/C1W4_Assignment.ipynb
@@ -246,18 +246,15 @@
     "    # - batch_size: number of images the generator yields when asked for a next batch. Set this to 10.\n",
     "    # - class_mode: How the labels are represented. Should be one of \"binary\", \"categorical\" or \"int\".\n",
     "    #               Pick the one that better suits here given that the labels can only be two different values.\n",
-    "    train_dataset = None(\n",
-    "        directory=None,\n",
-    "        image_size=None,\n",
-    "        batch_size=None,\n",
-    "        label_mode=None\n",
+    "    train_dataset = tf.keras.utils.image_dataset_from_directory(\n",
+    "        directory=\"./data/\", image_size=(150, 150), batch_size=10, label_mode=\"binary\"\n",
     "    )\n",
     "\n",
     "    # Define the rescaling layer (passing in the appropriate parameters)\n",
-    "    rescale_layer = None\n",
+    "    rescale_layer = tf.keras.layers.Rescaling(1./255)\n",
     "\n",
     "    # Apply the rescaling by using the map method and a lambda\n",
-    "    train_dataset_scaled = None\n",
+    "    train_dataset_scaled = train_dataset.map(lambda x, y: (rescale_layer(x), y))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -357,7 +354,6 @@
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: create_and_compile_model\n",
-    "\n",
     "def create_and_compile_model():\n",
     "    \"\"\"Creates, compiles and trains the model to predict happy from sad faces.\n",
     "\n",
@@ -368,17 +364,24 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Define the model\n",
-    "    model = tf.keras.models.Sequential([ \n",
-    "\t\tNone\n",
-    "    ]) \n",
+    "    model = tf.keras.models.Sequential([\n",
+    "        tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(150,150,3)),\n",
+    "        tf.keras.layers.MaxPooling2D(2,2),\n",
+    "        tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D(2,2),\n",
+    "        tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D(2,2),\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
     "\n",
     "    # Compile the model\n",
     "    # Remember to set an appropriate loss function, optimizer and metrics \n",
-    "    None.None(\n",
-    "        loss=None,\n",
-    "        optimizer=None,\n",
-    "        metrics=None\n",
-    "    ) \n",
+    "    model.compile(\n",
+    "        loss='binary_crossentropy',\n",
+    "        optimizer='adam',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
